# cortellis-cli

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BRAINSTORM-user-value.md  EXPLORATION-ai-native.md  KNOWLEDGE_BASE.md  LICENSE  PLAN.md  README.md  council-report-20260404-company-peers.html  council-report-20260404-disease-briefing.html  council-report-20260404-drug-profile.html  council-report-20260404-final.html  council-report-20260404-head-to-head.html  council-report-20260404-pipeline.html  council-report-20260404-verification.html  council-report-20260404.html  council-report-asthma-verification-20260405.html  council-report-combination-landscape-20260404.html  council-report-combo-verification-20260404.html  council-report-drug-comparison-20260404.html  council-report-landscape-strategy-20260404.html  council-report-target-profile-20260404.html  council-transcript-20260404-clinical-landscape.md  council-transcript-20260404-company-peers.md  council-transcript-20260404-deal-deep-dive.md  council-transcript-20260404-disease-briefing.md  council-transcript-20260404-drug-profile.md  council-transcript-20260404-drug-swot.md  council-transcript-20260404-final.md  council-transcript-20260404-pipeline.md  council-transcript-20260404-verification.md  council-transcript-20260404.md  council-transcript-asthma-verification-20260405.md  council-transcript-combination-landscape-20260404.md  council-transcript-landscape-strategy-20260404.md  council-transcript-landscape-verification-20260404.md  council-transcript-target-profile-20260404.md  (+5 more)
.claude-plugin/: plugin.json  (+1 more)
(+368 files in other folders)
